- Added clipping example - Added ability to pass reversed enter keyframes as exit keyframes by keyword - Fixes

--- a/src/components/Example/Example.module.scss
+++ b/src/components/Example/Example.module.scss
@@ -5,6 +5,7 @@
   width: fit-content;
   padding: 25px;
   position: relative;
+  flex-shrink: 0;
 
   &::before {
     content: var(--title);
